--- a/index.html
+++ b/index.html
@@ -180,12 +180,12 @@ height:340px;
 <section id="letterSection">
 
 <div class="photo-grid">
-<div class="polaroid"><img src="https://picsum.photos/400?1"></div>
-<div class="polaroid"><img src="https://picsum.photos/400?2"></div>
-<div class="polaroid"><img src="https://picsum.photos/400?3"></div>
-<div class="polaroid"><img src="https://picsum.photos/400?4"></div>
-<div class="polaroid"><img src="https://picsum.photos/400?5"></div>
-<div class="polaroid"><img src="https://picsum.photos/400?6"></div>
+<div class="polaroid"><img src="photo1.jpg"></div>
+<div class="polaroid"><img src="photo2.jpg"></div>
+<div class="polaroid"><img src="photo3.jpg"></div>
+<div class="polaroid"><img src="photo4.jpg"></div>
+<div class="polaroid"><img src="photo5.jpg"></div>
+<div class="polaroid"><img src="photo6.jpg"></div>
 </div>
 
 <div class="letter">
