--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Will You Be My Valentine? 💖</title>
+<title>Will You Be My Valentine, Now and Forever? 💖</title>
 
 <style>
 *{
@@ -189,7 +189,7 @@ height:340px;
 </div>
 
 <div class="letter">
-<h2>My Love ❤️</h2>
+<h2>My Saniya ❤️</h2>
 <p id="typewriter"></p>
 </div>
 
@@ -246,7 +246,7 @@ yesBtn.addEventListener("click", () => {
   dialogText.textContent = "I knew you'd say yes 💕";
 
   // Start from specific timestamp (in seconds)
-  music.currentTime = 42;   // ← change this to where you want it to start
+  music.currentTime = 47;   // ← change this to where you want it to start
 
   music.play().catch(err => console.log("Audio blocked:", err));
 
@@ -263,6 +263,9 @@ yesBtn.addEventListener("click", () => {
 function startTypewriter(){
 const text=`From the moment you came into my life,
 everything became softer, brighter, warmer.
+
+I just relive our moments everytime 
+something like this comes up,
 
 You are my favorite thought,
 my safest place,
