--- a/index.html
+++ b/index.html
@@ -67,10 +67,11 @@ color:#4a4a4a;
 
 .button-container{
 position:absolute;
-top:80px;
+top:100px;
 bottom:20px;
 left:0;
 width:100%;
+height:220px; /* give more vertical room */
 }
 
 .popup button{
@@ -85,15 +86,15 @@ transition:left 0.25s ease, top 0.25s ease;
 }
 
 .yes{
-left:40px;
-bottom:0;
+left:15%;
+bottom:20px;
 background:linear-gradient(135deg,#fbc2eb,#a6c1ee);
 color:white;
 }
 
 .no{
-right:40px;
-bottom:0;
+left:60%;   /* fixed starting position */
+bottom:20px;
 background:rgba(255,255,255,0.3);
 color:white;
 }
